--- a/app/src/main/res/layout/activity_mocksection.xml
+++ b/app/src/main/res/layout/activity_mocksection.xml
@@ -16,6 +16,7 @@
             android:textColor="@color/white"
             android:background="@color/tool_co"
             android:textStyle="bold"
+            android:typeface="serif"
             android:gravity="center_vertical"
             android:paddingStart="25dp"
             android:textSize="20sp">
@@ -38,17 +39,18 @@
             android:id="@+id/button2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:text="📌  Aptitude"
             android:textAllCaps="false"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp" />
+            android:layout_marginTop="20dp"
+            />
 
         <Button
             android:id="@+id/button3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:text="📌 Verbal Ability"
             android:layout_marginBottom="10dp"
             android:textAllCaps="false" />
@@ -59,7 +61,7 @@
             android:layout_height="wrap_content"
             android:text="📌 Logical Reasoning"
             android:layout_marginBottom="10dp"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:textAllCaps="false" />
 
         <Button
@@ -68,7 +70,7 @@
             android:layout_height="wrap_content"
             android:text="📌 Non-verbal Reasoning"
             android:layout_marginBottom="10dp"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:textAllCaps="false"/>
 
         <Button
@@ -77,7 +79,7 @@
             android:layout_height="wrap_content"
             android:text="📌 General Knowledge"
             android:layout_marginBottom="10dp"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:textAllCaps="false" />
 
 
@@ -87,7 +89,7 @@
             android:layout_height="wrap_content"
             android:text="📌 Current Affairs"
             android:layout_marginBottom="10dp"
-            android:background="@color/smokeWhite"
+            android:background="@drawable/buttonshape"
             android:textAllCaps="false"/>
 
 
