--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -13,20 +13,20 @@
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_width="125dp"
-            android:layout_height="166dp"
-            android:layout_marginTop="100dp"
+            android:layout_width="103dp"
+            android:layout_height="119dp"
+            android:layout_marginTop="120dp"
             android:src="@drawable/contact" />
 
         <TextView
-            android:layout_width="279dp"
-            android:layout_height="349dp"
+            android:layout_width="312dp"
+            android:layout_height="350dp"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:text="@string/contact"
             android:textColor="@color/red"
-            android:textSize="20sp"
-            android:clickable="true"
-            android:textCursorDrawable="@color/tool_co"/>
+            android:textCursorDrawable="@color/tool_co"
+            android:textSize="20sp" />
 
     </LinearLayout>
 
