--- a/app/src/main/res/layout/activity_course.xml
+++ b/app/src/main/res/layout/activity_course.xml
@@ -5,16 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@drawable/color_main">
 
+    <TextView
+        android:id="@+id/header"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="📖 Course"
+        android:textColor="@color/white"
+        android:background="@color/tool_co"
+        android:textStyle="bold"
+        android:typeface="serif"
+        android:gravity="center_vertical"
+        android:paddingStart="25dp"
+        android:textSize="20sp">
+    </TextView>
 
     <androidx.recyclerview.widget.RecyclerView
-       android:layout_marginTop="35dp"
         android:id="@+id/recycleview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/color_main">
+        android:paddingTop="5dp">
 
 
     </androidx.recyclerview.widget.RecyclerView>
+</LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
