--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -16,9 +16,14 @@
         <item name="android:itemBackground">@drawable/color_main</item>
     </style>
 
-
     <style name="ChangebgColor" parent="@android:style/TextAppearance.Widget.IconMenu.Item">
-    <item name="android:textColor">@color/black</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="MyTextBold">
+        <item name="android:textSize">34sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#FF6F00</item>
     </style>
 
 
