--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -11,19 +11,17 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-
         <TextView
-
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-
-            android:layout_marginTop="25dp"
-
+            android:layout_margin="25dp"
             android:fontFamily="@font/aladin"
             android:text="@string/about"
             android:textAlignment="center"
             android:textColor="@color/gray"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+        />
+
     </LinearLayout>
 
 </FrameLayout>
