--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,8 +11,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/color_main"
+        android:layout_height="600dp"
         android:orientation="vertical">
 
 
@@ -21,72 +20,73 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
-            android:background="@color/drab_g"
+            android:background="@color/teal_700"
             android:fitsSystemWindows="true"
-            android:paddingTop="10dp"
+            android:fontFamily="@font/aclonica"
+            android:paddingVertical="5dp"
             android:text="@string/head"
             android:textAlignment="center"
             android:textColor="@color/yellow"
             android:textSize="25sp"
-            android:textStyle="bold"
-            android:fontFamily="@font/aclonica"/>
+            android:textStyle="bold" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/drab_g"
+            android:layout_height="242dp"
             app:srcCompat="@drawable/image2" />
 
         <TextView
             android:id="@+id/learn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_margin="5dp"
+            android:fontFamily="@font/aladin"
             android:padding="5dp"
             android:text="@string/sub_head"
-            android:textColor="@color/red"
-            android:textSize="20sp"
-            android:fontFamily="@font/aladin" />
-
+            android:textColor="@color/teal_200"
+            android:textSize="20sp" />
 
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="wrap_content"
             android:layout_height="180dp"
             android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"/>
+            android:layout_marginBottom="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/aladin"
-            android:text="Fastest access to 🏃 "
-            android:textColor="@color/red"
-            android:textSize="20sp"
-            android:paddingBottom="15dp"
+            android:layout_gravity="center"
             android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"/>
+            android:layout_marginTop="5dp"
+            android:fontFamily="@font/aladin"
+            android:paddingBottom="15dp"
+            android:text="⚡ Fast access to resources"
+            android:textColor="@color/teal_200"
+            android:textSize="20sp" />
     </LinearLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="81dp"
+        android:layout_width="357dp"
+        android:layout_height="wrap_content"
         android:layout_marginTop="600dp"
-        android:background="@color/drab_g"
+        android:fitsSystemWindows="true"
+        android:gravity="center"
         android:orientation="horizontal"
-        android:fitsSystemWindows="true">
+        android:padding="20dp"
 
-
+        >
 
         <ImageView
             android:id="@+id/ncert"
-            android:layout_width="75dp"
-            android:layout_height="75dp"
-            android:layout_marginLeft="90dp"
-            app:srcCompat="@drawable/ncert"
+            android:layout_width="65dp"
+            android:layout_height="65dp"
             android:layout_gravity="center"
-           android:clickable="true"
-            android:fitsSystemWindows="true"/>
+            android:layout_marginLeft="90dp"
+            android:clickable="true"
+            android:fitsSystemWindows="true"
+            app:srcCompat="@drawable/ncert" />
 
         <ImageView
             android:id="@+id/sarkariresult"
@@ -94,12 +94,10 @@
             android:layout_height="75dp"
             android:layout_gravity="center"
             android:layout_marginLeft="20dp"
-            app:srcCompat="@drawable/sarkariresult"
             android:clickable="true"
-            android:fitsSystemWindows="true" />
-
+            android:fitsSystemWindows="true"
+            app:srcCompat="@drawable/sarkariresult" />
 
     </LinearLayout>
-
 
 </FrameLayout>
