--- a/app/src/main/res/layout/row_layout_view.xml
+++ b/app/src/main/res/layout/row_layout_view.xml
@@ -4,17 +4,16 @@
     android:layout_height="wrap_content"
     android:layout_gravity="center"
     android:layout_margin="5dp"
-    android:background="@drawable/drawable"
+    android:background="@drawable/splashcolor"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp">
 
 
-
     <ImageView
         android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="376dp"
+        android:layout_height="367dp"
         android:layout_gravity="center"
         android:scaleType="fitXY"
         android:src="@mipmap/easyedu">
@@ -28,8 +27,9 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/arbutus"
         android:gravity="center"
-        android:text="ram"
+        android:text="Boost Your  Learning"
         android:textSize="20sp"
-        android:textColor="@color/tool_co"
-        android:textStyle="italic" />
+        android:textColor="@color/smokeWhite"
+        android:layout_marginBottom="10dp"
+        android:textStyle="bold" />
 </LinearLayout>
